# agentic_rpa_sap_v1

./: .env.example  .gitignore  README.md  pyproject.toml
agents/o2c_agent/: __init__.py  agent.py  prompts.py  run_scenario.py
agents/o2c_agent/eval/: o2c.evalset.json
agents/o2c_agent/tests/: test_agent_build.py
docs/superpowers/plans/: 2026-06-02-sap-rpa-replacement-o2c.md  2026-06-03-sap-fidelity-real-specs.md
docs/superpowers/specs/: 2026-06-02-sap-rpa-replacement-o2c-design.md  2026-06-03-sap-fidelity-real-specs-design.md
fake_sap/: app.py  entities.py  metadata.py  odata.py  rules.py  schema.py  seed.py  store.py
fake_sap/tests/: test_app_billing.py  test_app_delivery.py  test_app_sales_order.py  test_entities.py  test_error_envelope.py  test_metadata.py  test_odata.py  test_rules.py  test_schema.py  test_store.py
mcp_server/: sap_client.py  server.py
mcp_server/tests/: test_sap_client.py  test_tools.py
rpa_bot/: bot.py
rpa_bot/tests/: test_bot.py
sap_api/: API_MATERIAL_DOCUMENT_SRV.json  API_SALES_ORDER_SRV.json  README.md
scripts/: run_demo.sh
web/: server.py
web/static/: app.js  index.html  style.css
web/tests/: test_gateway.py
