[project]
name = "sap-o2c-rpa-replacement"
version = "0.1.0"
description = "Demo: replacing SAP O2C RPA with a multi-agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "mcp>=1.2",
    "google-adk>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["fake_sap", "mcp_server", "rpa_bot", "agents", "web"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fake_sap*", "mcp_server*", "rpa_bot*", "web*", "agents*"]
